--- a/home.html
+++ b/home.html
@@ -12,8 +12,9 @@
     <!-- <link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap%404.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="./cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+
     <!-- Fonts Awesome -->
-    <script src="../kit.fontawesome.com/b8ae5b1960.js" crossorigin="anonymous"></script>
+    <script src="./kit.fontawesome.com/b8ae5b1960.js" crossorigin="anonymous"></script>
 
     <!-- Google Fonts -->
     <link
@@ -28,7 +29,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- CSS Game -->
-    <link href="Content/style.css" rel="stylesheet" />
+    <link href="./Content/style.css" rel="stylesheet" />
 
     <link rel="icon" href="asset/img/pavicon-dawae.png" type="Image/x-icon">
 
@@ -2300,25 +2301,24 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="../code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="../cdn.jsdelivr.net/npm/popper.js%401.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="../cdn.jsdelivr.net/npm/bootstrap%404.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="../cdn.jsdelivr.net/gh/twbs/bootstrap%40v4-dev/dist/js/bootstrap.js"></script>
+    <script src="./code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"  crossorigin="anonymous"></script>
+    <script src="./cdn.jsdelivr.net/npm/popper.js%401.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="./cdn.jsdelivr.net/npm/bootstrap%404.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"  crossorigin="anonymous"></script>
+ 
+
+    <!-- <script src="../cdn.jsdelivr.net/gh/twbs/bootstrap%40v4-dev/dist/js/bootstrap.js"></script> -->
+    <script src="./cdn.jsdelivr.net/gh/twbs/bootstrap@v4-dev/dist/js/bootstrap.js"></script>
 
     <!-- Script Game -->
-    <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!-- <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> --> 
+     <script src="./ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
     <script>window.jQuery || document.write('<script src="Scripts/jQuery.html"><\/script>')</script>
-    <script src="Scripts/testlevels.js"></script>
-    <script src="Scripts/oop.js"></script>
-    <script src="Scripts/keys.js"></script>
-    <script src="Scripts/constants.js"></script>
-    <script src="Scripts/main.js"></script>
+    <script src="./Scripts/testlevels.js"></script>
+    <script src="./Scripts/oop.js"></script>
+    <script src="./Scripts/keys.js"></script>
+    <script src="./Scripts/constants.js"></script>
+    <script src="./Scripts/main.js"></script>
 
     <!-- Script Button Copy -->
     <script>
@@ -2331,7 +2331,8 @@
     </script>
 
     <!-- File JS Tooltip -->
-    <script src="asset/js/tether.js"></script>
+    <!-- <script src="asset/js/tether.js"></script> -->
+    <script src="./asset/js/tether.js"></script>
 
     <!-- Script Tooltip -->
     <script>
@@ -2341,8 +2342,8 @@
     </script>
 
     <!-- Script Audio Player -->
-    <script src="js/music-list.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/music-list.js"></script>
+    <script src="./js/script.js"></script>
 
 
 </body>
