--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <link rel="stylesheet" href="./cdn.jsdelivr.net/npm/bootstrap%404.3.1/dist/css/bootstrap.min.css"   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <!-- Fonts Awesome -->
-    <script src="../kit.fontawesome.com/b8ae5b1960.js" crossorigin="anonymous"></script>
+    <!-- <script src="./kit.fontawesome.com/b8ae5b1960.js" crossorigin="anonymous"></script> -->
+     <script src="./kit.fontawesome.com/b8ae5b1960.js"></script>
 
     <!-- Google Fonts -->
     <link
