--- a/Scripts/jQuery.html
+++ b/Scripts/jQuery.html
@@ -32,6 +32,7 @@
     <title>Oops, something lost</title>
     <meta name="description" content="Oops, looks like the page is lost. Start your website on the cheap.">
     <link media="all" rel="stylesheet" href="/htdocs_error/style.css">
+    <!-- <link rel="stylesheet" href=""> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
