--- a/home.html
+++ b/home.html
@@ -29,7 +29,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- CSS Game -->
-    <link href="./Content/style.css" rel="stylesheet" />
+    <link href="Content/style.css" rel="stylesheet" />
+    <!-- <link href="./Content/style.css" rel="stylesheet" /> -->
 
     <link rel="icon" href="asset/img/pavicon-dawae.png" type="Image/x-icon">
 
@@ -63,6 +64,7 @@
             </div>
         </div>
         <div class="row">
+            
             <div class="col-lg-4">
                 <div class="card">
                     <h5 class="card-header">ABOUT $DAWAE</h5>
@@ -2313,13 +2315,18 @@
     <!-- <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> --> 
      <script src="./ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <script>window.jQuery || document.write('<script src="Scripts/jQuery.html"><\/script>')</script>
-    <script src="./Scripts/testlevels.js"></script>
+    <script>window.jQuery || document.write('<script src="./Scripts/jQuery.html"><\/script>')</script>
+    <!-- <script src="./Scripts/testlevels.js"></script>
     <script src="./Scripts/oop.js"></script>
     <script src="./Scripts/keys.js"></script>
     <script src="./Scripts/constants.js"></script>
-    <script src="./Scripts/main.js"></script>
+    <script src="./Scripts/main.js"></script> -->
 
+    <script src="Scripts/testlevels.js"></script>
+    <script src="Scripts/oop.js"></script>
+    <script src="Scripts/keys.js"></script>
+    <script src="Scripts/constants.js"></script>
+    <script src="Scripts/main.js"></script>
     <!-- Script Button Copy -->
     <script>
         function myFunction() {
@@ -2331,8 +2338,8 @@
     </script>
 
     <!-- File JS Tooltip -->
-    <!-- <script src="asset/js/tether.js"></script> -->
-    <script src="./asset/js/tether.js"></script>
+    <script src="asset/js/tether.js"></script>
+    <!-- <script src="./asset/js/tether.js"></script> -->
  
     <!-- Script Tooltip -->
     <script>
