--- a/index.html
+++ b/index.html
@@ -449,7 +449,23 @@
             <!-- ------------------------------------------- RIGHT PAGE ------------------------------------------- -->
 
             <div class="col-lg-8">
-          
+                <div class="card game_container desktop_container">
+                    <h5 class="card-header">PLAY $DAWAE</h5>
+                    <div class="card-body">
+                        <div id="game">
+                            <div id="world">
+                            </div>
+                            <div id="coinNumber" class="gauge">0</div>
+                            <div id="coin" class="gaugeSprite"></div>
+                            <div id="liveNumber" class="gauge">0</div>
+                            <div id="live" class="gaugeSprite"></div>
+                        </div>
+                        <iframe width="0" height="0" src="https://www.youtube.com/embed/SB1VqLCTFpA?rel=0&autoplay=1"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
 
                 <!-- Social Media Awal -->
                 <div class="card desktop_container">
@@ -743,14 +759,7 @@
 
     <!-- Script Game --> 
      <script src="./ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-    <script>window.jQuery || document.write('<script src="./Scripts/jQuery.html"><\/script>')</script>
-    <!-- <script src="./Scripts/testlevels.js"></script>
-    <script src="./Scripts/oop.js"></script>
-    <script src="./Scripts/keys.js"></script>
-    <script src="./Scripts/constants.js"></script>
-    <script src="./Scripts/main.js"></script> -->
-
+    <script>window.jQuery || document.write('<script src="./Scripts/jQuery.html"><\/script>')</script> 
     <script src="Scripts/testlevels.js"></script>
     <script src="Scripts/oop.js"></script>
     <script src="Scripts/keys.js"></script>
