--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="card video-youtube mobile_container">
                     <h5 class="card-header">TYSON KNOWS $DAWAE</h5>
                     <div class="card-body" style="height: 700px;">
-                        <iframe src="https://www.youtube.com/embed/LD8P8Mq3rVU?rel=0&autoplay=1" title="YouTube video player"
+                        <iframe src="https://www.youtube.com/embed/LD8P8Mq3rVU?rel=0" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -528,7 +528,7 @@
                 <div class="card video-youtube desktop_container">
                     <h5 class="card-header">TYSON KNOWS $DAWAE</h5>
                     <div class="card-body" style="height: 700px;">
-                        <iframe src="https://www.youtube.com/embed/LD8P8Mq3rVU?rel=0&autoplay=1" title="YouTube video player"
+                        <iframe src="https://www.youtube.com/embed/LD8P8Mq3rVU?rel=0" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
