--- a/index.html
+++ b/index.html
@@ -435,7 +435,32 @@
                         <div class="row">
                             <div class="col">
                                 <img src="asset/img/image_colletion/V2/DAWAE%20MEME1.png" class="img-fluid" alt="">
-                            </div>
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME14.png" class="img-fluid" alt="">
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME13.png" class="img-fluid" alt="">
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME17.png" class="img-fluid" alt="">
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME20.png" class="img-fluid" alt="">
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME21.png" class="img-fluid" alt="">
+                            </div> 
                         </div>
  
                     </div>
