--- a/index.html
+++ b/index.html
@@ -434,6 +434,11 @@
 
                         <div class="row">
                             <div class="col">
+                                <img src="asset/img/image_colletion/newmeme.jpeg" class="img-fluid new_meme" alt="">
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="col">
                                 <img src="asset/img/image_colletion/V2/DAWAE%20MEME1.png" class="img-fluid" alt="">
                             </div> 
                         </div>
