--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
                         <div class="row">
                             <div class="col">
-                                <img src="asset/img/image_colletion/newmeme.jpeg" class="img-fluid new_meme" alt="">
+                                <img src="asset/img/image_colletion/newmeme.jpg" class="img-fluid new_meme" alt="">
                             </div> 
                         </div>
                         <div class="row">
