--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <div class="col">
                                 <a href="https://opensea.io/collection/itsdawae"
                                     class="btn button d-flex align-items-center justify-content-center"><img
-                                        src="asset/img/icon1.png" alt="">DEXSCREEN</a>
+                                        src="asset/img/icon1.png" alt="" class="icon1">DEXSCREEN</a>
                             </div>
                         </div>
                     </div>
