--- a/index.html
+++ b/index.html
@@ -359,31 +359,43 @@
                             <div class="col">
                                 <a href="https://t.me/showmedawae"
                                     class="btn button d-flex align-items-center justify-content-center mr-4"><img
-                                        src="asset/img/icon_sosmed/icon_telegram.png" alt="">TELEGRAM</a>
+                                        src="asset/img/icon_sosmed/icon_telegram.png" alt="">
+                                    <span class="text_social">TELEGRAM</span>
+                                    </a>
                             </div>
                             <div class="col">
                                 <a href="https://twitter.com/itsdawae"
                                     class="btn button d-flex align-items-center justify-content-center mr-4"><img
-                                        src="asset/img/icon_sosmed/icon_twiterx.png" alt="">TWITTER X</a>
+                                        src="asset/img/icon_sosmed/icon_twiterx.png" alt="">
+                                    <span class="text_social">TWITTER X</span>
+                                    </a>
                             </div>
                             <div class="col">
                                 <a href="http://dextools.io/app/en/ether/pair-explorer/0x1567b7766988abc893c09e992bb011bb8a761683"
                                     class="btn button d-flex align-items-center justify-content-center mr-4"><img
-                                        src="asset/img/icon_sosmed/icon_dextools.png" alt="">DEXTOOLS</a>
+                                        src="asset/img/icon_sosmed/icon_dextools.png" alt="">
+                                    <span class="text_social">DEXTOOLS</span>
+                                    </a>
                             </div>
                             <div class="col">
                                 <a href="https://etherscan.io/token/0x000000000000000000000000000000000000dEaD"
                                     class="btn button d-flex align-items-center justify-content-center mr-4"><img
-                                        src="asset/img/icon_sosmed/icon_etherscan.png" alt="">ETHERSCAN</a>
+                                        src="asset/img/icon_sosmed/icon_etherscan.png" alt="">
+                                    <span class="text_social">ETHERSCAN</span>
+                                    </a>
                             </div>
                             <div class="col">
                                 <a href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0x000000000000000000000000000000000000dEaD" class="btn button d-flex align-items-center justify-content-center"><img
-                                        src="asset/img/icon_sosmed/icon_uniswap.png" alt="">UNISWAP</a>
+                                        src="asset/img/icon_sosmed/icon_uniswap.png" alt="">
+                                    <span class="text_social">UNISWAP</span>
+                                    </a>
                             </div>
                             <div class="col">
                                 <a href="https://opensea.io/collection/itsdawae"
                                     class="btn button d-flex align-items-center justify-content-center"><img
-                                        src="asset/img/icon1.png" alt="" class="icon1">DEXSCREEN</a>
+                                        src="asset/img/icon1.png" alt="" class="icon1">    
+                                    <span class="text_social">DEXSCREEN</span>
+                                </a>
                             </div>
                         </div>
                     </div>
