--- a/index.html
+++ b/index.html
@@ -125,26 +125,7 @@
                                 src="asset/img/icon_etherscan_dex.png" alt="">ETHERSCAN</a>
                     </div>
                 </div>
-
-                <!-- <div class="card tokenomics-card">
-                    <h5 class="card-header">TOKENOMICS: DA WAY OF $DAWAE
-                    </h5>
-                    <div class="card-body rounded" style="background-color: white;">
-                        <h5 class="card-title-tkn" style="color: black;">Total Supply</h5>
-                        <h1>1.000.000.000</h1>
-                        <hr>
-                        <h5 class="card-title-tkn">Buy & Sell TAX</h5>
-                        <h1>2/2</h1>
-                        <hr>
-                        <h5 class="card-title-tkn">Ticker</h5>
-                        <h1>#DAWAE</h1>
-                        <hr>
-                        <a href="#" class="btn button d-flex align-items-center justify-content-center"><img
-                                src="asset/img/icon_etherscan_dex.png" alt="">ETHERSCAN</a>
-                    </div>
-                </div> -->
-
-
+ 
                 <div class="card">
                     <h5 class="card-header">ROADMAP $DAWAE</h5>
                     <div class="card-body">
@@ -423,7 +404,7 @@
                 <!-- Video Youtube Awal-->
                 <div class="card video-youtube mobile_container">
                     <h5 class="card-header">TYSON KNOWS $DAWAE</h5>
-                    <div class="card-body" style="height: 700px;">
+                    <div class="card-body youtube_container"  >
                         <iframe src="https://www.youtube.com/embed/LD8P8Mq3rVU?rel=0" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -469,11 +450,7 @@
                                 <img src="asset/img/image_colletion/V2/DAWAE%20MEME17.png" class="img-fluid" alt="">
                             </div> 
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <img src="asset/img/image_colletion/V2/DAWAE%20MEME20.png" class="img-fluid" alt="">
-                            </div> 
-                        </div>
+                      
                         <div class="row">
                             <div class="col">
                                 <img src="asset/img/image_colletion/V2/DAWAE%20MEME21.png" class="img-fluid" alt="">
