--- a/index.html
+++ b/index.html
@@ -656,39 +656,50 @@
                         <!-- memes -->
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME1.png" class="img-fluid" alt="">
+                                <img src="asset/img/image_colletion/DAWAE33.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME2.png" class="img-fluid" alt="">
+                                <img src="asset/img/image_colletion/DAWAE36.jpg" class="img-fluid" alt="">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE37.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE38.jpg" class="img-fluid" alt="">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE40.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE41.jpg" class="img-fluid" alt="">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE42.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE45.jpg" class="img-fluid" alt="">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE47.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="asset/img/image_colletion/DAWAE50.jpg" class="img-fluid" alt="">
                             </div>
                         </div>
  
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME3.png" class="img-fluid" alt="">
-                            </div>
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME4.png" class="img-fluid" alt="">
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME5.png" class="img-fluid" alt="">
-                            </div>
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME6.png" class="img-fluid" alt="">
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME7.png" class="img-fluid" alt="">
-                            </div>
-                            <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/V2/DAWAE MEME8.png" class="img-fluid" alt="">
-                            </div>
-                        </div>
+                       
                         
                     </div>
                 </div> 
