--- a/index.html
+++ b/index.html
@@ -425,6 +425,13 @@
                     <h5 class="card-header"></h5>
                     <div class="card-body">
 
+                        <div class="row new_memes_text">
+                            <p> You know dawae bruddah</p>
+                            <div class="col">
+                                <img src="asset/img/image_colletion/newmeme2.jpeg" class="img-fluid " alt="">
+                            </div> 
+                        </div>
+
                         <div class="row">
                             <div class="col">
                                 <img src="asset/img/image_colletion/newmeme.jpeg" class="img-fluid new_meme" alt="">
@@ -777,6 +784,7 @@
         </footer>
         <!-- Footer Akhir -->
     </div>
+ 
 
 
     <!-- music -->
@@ -836,8 +844,7 @@
                 $('.pop_up_container').addClass('active');
                 var audio = document.getElementById('background-music');
                 audio.play();
-
-                // $('.play-pause').find('i').text('play_arrow');
+ 
             });
         });
 
