--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 
     <!-- music -->
     <audio autoplay loop id="background-music" >
-        <source src="./songs/DJ Marky - Its the way.mp3" type="audio/mp3">
+        <source src="./songs/FIND DA WAE (Original song) [Animation by shgurr] CG5.mp3" type="audio/mp3">
     </audio>
 
 
