--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
                             <div id="liveNumber" class="gauge">0</div>
                             <div id="live" class="gaugeSprite"></div>
                         </div>
-                        <iframe width="0" height="0" src="https://www.youtube.com/embed/SB1VqLCTFpA?rel=0&autoplay=1"
+                        <!-- <iframe width="0" height="0" src="https://www.youtube.com/embed/SB1VqLCTFpA?rel=0&autoplay=1"
                             frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                            allowfullscreen></iframe> -->
                     </div>
                 </div>
 
