--- a/index.html
+++ b/index.html
@@ -77,25 +77,19 @@
                         <h5 class="card-title-abt">Get to Know Deeper with #DAWAE</h5>
                         <p class="card-text">Listen. Degens. 'cause dawae ain't fuckin' messin' 'round! "Do yu kno da
                             wae?" Hell fuckin' naw, brudda, 'cause if yu did, yu'd already be riding dis shitstorm
-                            called $dawae like a crack-addicted wildebeest on steroids! Ain't no limp-dick coin, it's da
-                            fucking king of crypto, ripped straight outta Knuckles' sweaty, wild wet dreams! "Yu do kno
+                            called $dawae like a wildebeest on steroids!  ripped straight outta Knuckles' sweaty, wild wet dreams! "Yu do kno
                             da wae?" Bullshit! not this da wae. This thing's batshit insane, tearing through da fucking
-                            market like a rabid monkey humping a football! Screw da piss-poor, shit-stained rules, and
-                            your grandma's dumbfuck, ancient, flaccid advice! Buy $dawae or go blow Robotnik's overgrown
-                            mustache! Either way, we're blasting off like a turd from a tall cow's ass, and if yu miss
-                            out, yu'll be bawling like a useless, dickless sod! Let us sho yu da wae, da rudest,
-                            crudest, maddest fucking crypto ride yu'll ever have, nastier than a two-dollar whore on
-                            discount day! Buckle up, ya fucking degens, and welcome to da wicked, no-holds-barred,
+                            market like a rabid monkey humping a football! Buy $dawae or go blow Robotnik's overgrown
+                            mustache! Either way, we're blasting off like a turd from a tall cow's ass, yu'll ! Let us sho yu da wae, da rudest,
+                            crudest, maddest fucking crypto ride yu'll ever have,  Buckle up, ya fucking degens, and welcome to da wicked, no-holds-barred,
                             ugly-as-sin way of $dawae, baby! Clicking sounds fucking intensify like an orgy in a
                             hardware store! Buckle da hell up, 'cause $dawae ain't no pussy-ass token; it's da fucking
                             king, the Sultan of Swat, the big, swinging dick of crypto! Born from the diseased gut of
                             Uganda, where da warriors know da real shit and eat danger for breakfast, this meme's
                             spitting and pissing in da face of all dem limp-wristed coins. Too good for memes? Fuck off,
-                            ya sniveling cunt! $dawae's not just shoving over; it's steamrolling the fuck over you! We
+                             $dawae's not just shoving over; it's steamrolling the fuck over you! We
                             ain't just bullish; we're a foaming-at-the-mouth, rabies-infected, bloodthirsty stampede,
-                            and we're coming for your pathetic ass! Rules, laws? Fuck 'em with a rusty rake! We spit,
-                            piss, and vomit on that shit! Your granny's saggy advice? Chuck it like last night's rotten
-                            takeout! Buy $dawae, or don't, like we give a rat's festering anus! Welcome to da unhinged,
+                            and we're coming for your pathetic ass! Welcome to da unhinged,
                             unzipped, untamed way of $dawae, baby! Get with it or get da fuck out, 'cause we ain't
                             slowing down for nobody! Clicking sounds fucking intensify like a tornado in a nail factory!
                             $DAWAE $DAWAE $DAWAE $DAWAE $DAWAE $DAWAE $DAWAE</p>
@@ -160,9 +154,9 @@
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
-                                        NFTs? Hell yeah, bruddas! We're tossin' 'em like fuckin' grenades in a meme war!
+                                        <!-- NFTs? Hell yeah, bruddas! We're tossin' 'em like fuckin' grenades in a meme war!
                                         Partnerships? We're fuckin' with da best, and if yu ain't in, yu're a fucking
-                                        pansy and dont know da wae!!!!***. Let's rip this shit apart!
+                                        pansy and dont know da wae!!!!***. Let's rip this shit apart! -->
 
                                     </div>
                                 </div>
@@ -179,13 +173,15 @@
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                     data-parent="#accordionExample">
-                                    <div class="card-body">
+                                    <!-- <div class="card-body">
                                         Stampede's coming, fuckers! Decentralized exchange? We're ramming that shit down
                                         yur throats like a mad rhino on fire! Get in da pools or get da fuck outta da
                                         way. $dawae waits for no one!
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
+
+<!--                             
                             <div class="card">
                                 <div class="card-header" id="headingFour">
                                     <h5 class="mb-0">
@@ -224,7 +220,9 @@
                                         fucking beauties! Clicking sounds fucking intensify! $DAWAE, $DAWAE, $DAWAE!!!
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
+
+
                         </div>
                     </div>
                 </div>
@@ -487,10 +485,7 @@
                             <div id="liveNumber" class="gauge">0</div>
                             <div id="live" class="gaugeSprite"></div>
                         </div>
-                        <!-- <iframe width="0" height="0" src="https://www.youtube.com/embed/SB1VqLCTFpA?rel=0&autoplay=1"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe> -->
+             
                     </div>
                 </div>
 
