--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <h5 class="card-title-abt">Get to Know Deeper with #DAWAE</h5>
                         <p class="card-text">Listen. Degens. 'cause dawae ain't fuckin' messin' 'round! "Do yu kno da
                             wae?" Hell fuckin' naw, brudda, 'cause if yu did, yu'd already be riding dis shitstorm
-                            called $dawae like a wildebeest on steroids!  ripped straight outta Knuckles' sweaty, wild wet dreams! "Yu do kno
+                            called $dawae like a wildebeest on steroids! ctrypto ripped, outta Knuckles' sweaty, wild wet dreams! "Yu do kno
                             da wae?" Bullshit! not this da wae. This thing's batshit insane, tearing through da fucking
                             market like a rabid monkey humping a football! Buy $dawae or go blow Robotnik's overgrown
                             mustache! Either way, we're blasting off like a turd from a tall cow's ass, yu'll ! Let us sho yu da wae, da rudest,
