--- a/index.html
+++ b/index.html
@@ -690,10 +690,10 @@
 
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/DAWAE47.jpg" class="img-fluid" alt="">
+                                <img src="asset/img/image_colletion/newdawae1.png" class="img-fluid" alt="">
                             </div>
                             <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/DAWAE50.jpg" class="img-fluid" alt="">
+                                <img src="asset/img/image_colletion/newdawae2.png" class="img-fluid" alt="">
                             </div>
                         </div>
  
