--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="asset/img/image_colletion/DAWAE47.jpg" class="img-fluid" alt="">
+                                <img src="asset/img/image_colletion/newdawae3.png" class="img-fluid" alt="">
                             </div>
                             <div class="col-lg-6">
                                 <img src="asset/img/image_colletion/DAWAE50.jpg" class="img-fluid" alt="">
