--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="./asset/img/grass.svg" alt="" class="w-[90%] max-w-[2000px] h-auto object-contain absolute bottom-[20px] ">
 
                 <!-- rockets -->
-                <img src="./asset/img/dawae_rockets.png" alt="" class="w-[150px] md:w-[200px] h-auto object-contain absolute right-[-2%] top-[5%] z-[3]">
+                <img src="./asset/img/dawae_rockets.png" alt="" class="w-[150px] md:w-[200px] h-auto object-contain absolute right-[-12%] top-[5%] z-[3] rockets">
 
                 <!-- clouds -->
                  <!-- left -->
@@ -113,7 +113,7 @@
          </section>
 
           <!--about -->
-          <section id="about" class="w-full h-[300px] md:h-[450px] xl:h-[700px] relative  flex flex-col items-center justify-center xl:my-[70px]">
+          <section id="about" class="w-full h-[300px] md:h-[450px] xl:h-[600px] relative  flex flex-col items-center justify-center xl:mt-[70px]">
             <!-- bg -->
              <!-- desktop -->
             <img src="./asset/img/bg_about.svg" alt="" class=" h-full object-contain w-[90%] max-w-[1700px] absolute hidden lg:block"> 
