--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                             <img src="./asset/img/bg_how01.svg" alt="" class="w-full h-full absolute z-0 object-contain">
 
                             <div class="num w-[15%] h-full relative">
-                                <span class="rounded-full bg-[#FF687A] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
+                                <span class="rounded-full Prstartk_font bg-[#FF687A] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
                                     1
                                 </span>
                             </div>
@@ -432,7 +432,7 @@
                             <img src="./asset/img/bg_how02.svg" alt="" class="w-full h-full absolute top-0 z-0 object-contain">
 
                             <div class="num w-[15%] h-full relative">
-                                <span class="rounded-full bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
+                                <span class="rounded-full Prstartk_font bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
                                     2
                                 </span>
                             </div>
@@ -452,7 +452,7 @@
                                 <img src="./asset/img/bg_how03.svg" alt="" class="w-full h-full absolute top-0 z-0 object-contain">
     
                                 <div class="num w-[10%] md:w-[15%] h-full relative flex justify-end mr-[1rem]">
-                                    <span class="rounded-full bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
+                                    <span class="rounded-full Prstartk_font bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
                                         3
                                     </span>
                                 </div>
@@ -473,7 +473,7 @@
                             <img src="./asset/img/bg_how04.svg" alt="" class="w-full h-full absolute top-0 z-0 object-contain">
 
                             <div class="num w-[10%] md:w-[15%] h-full relative flex justify-end mr-[1rem]">
-                                <span class="rounded-full bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
+                                <span class="rounded-full Prstartk_font bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
                                     4
                                 </span>
                             </div>
